2006-12-26  Akim Demaille  <akim.demaille@free.fr>

	s/_FLAVORS//
	* src/ucommand.hh (WHILE_FLAVORS, LOOPN_FLAVORS, FOREACH_FLAVORS)
	(FOR_FLAVORS, TREE_FLAVORS): Rename as...
	(WHILE, LOOPN, FOREACH, FOR, TREE): these.
	These names were just to ease the transition of semantics of
	these symbols.
	Adjust all uses.

	* src/uconnection.cc: Use a brand new C++ instruction: for.

2006-12-26  Akim Demaille  <akim.demaille@free.fr>

	Factor the command flavors
	* src/utypes.hh (UNodeType): Move to...
	* src/flavorable.hh (Flavorable::UNodeType): this new class.
	* src/ucommand.hh, src/ucommand.cc (U
	(to_string, kind, nodetype): Remove, now useless.
	(WHILE, WHILE_AND, WHILE_PIPE): Remove, replaced with...
	(WHILE_FLAVORS): this.
	(LOOPN, LOOPN_AND, LOOPN_PIPE): Remove, replaced with...
	(LOOPN_FLAVORS): this.
	(FOREACH, FOREACH_AND, FOREACH_PIPE): Remove, replaced with...
	(FOREACH_FLAVORS): this.
	(FOR, FOR_AND, FOR_PIPE): Remove, replaced with...
	(FOR_FLAVORS): this.
	(TREE): Rename as...
	(TREE_FLAVORS): this.
	(UCommand_TREE, UCommand_WHILE, UCommand_LOOPN, UCommand_FOREACH)
	(UCommand_FOR): Inherit from Flavorable.
	Adjust ctors and copy.
	(UCommand_TREE::node): Remove, duplicate flavor_.
	Adjust all uses.

2006-12-26  Akim Demaille  <akim.demaille@free.fr>

	Restyling
	* src/uvariablename.cc: Shorten scopes.
	Use Boolean expressions instead of statements.
	Use less useless variables.

2006-12-26  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>

	Restyle.
	* src/uasynccommand.cc,
	* src/uasyncregister.cc,
	* src/ubinder.cc,
	* src/ucommand.cc,
	* src/ucommand.hh,
	* src/ucommandqueue.cc,
	* src/uconnection.cc,
	* src/ueventcompound.cc,
	* src/ueventhandler.cc,
	* src/ueventinstance.cc,
	* src/ueventmatch.cc,
	* src/uexpression.cc,
	* src/ugroup.cc,
	* src/uobj.cc,
	* src/uobject.cc,
	* src/uqueue.cc,
	* src/userver.cc,
	* src/userver.hh,
	* src/ustring.cc,
	* src/uvalue.cc,
	* src/uvar.cc,
	* src/uvariable.cc,
	* src/uvariablename.hh: Formatting changes.
